# python-gooey-pyinstaller-template

./: LICENSE  README.md  pyproject.toml
languages/: japanese.json
src/gooey_pyinstaller_template/: __init__.py  __main__.py
