[project]
name = "gooey-pyinstaller-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nakahiro386", email = "nakahiro386@gmail.com" }
]
dependencies = [
    "gooey>=1.0.8.1",
    "pyinstaller>=6.10.0",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"gooey-pyinstaller-template" = "gooey_pyinstaller_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gooey_pyinstaller_template"]

[tool.rye.scripts]
gui = "python src/gooey_pyinstaller_template/__main__.py"
cui = "python src/gooey_pyinstaller_template/__main__.py --ignore-gooey"
build = "pyinstaller src/gooey_pyinstaller_template/__main__.py --onefile --noconsole --name gooey_pyinstaller_template --hidden-import='pkg_resources.py2_warn' --add-data languages/*;languages"
"lint:mypy" = "mypy src/gooey_pyinstaller_template"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "I", "B"]
extend-select = [
    "I",
    "N",
    "UP",
    "FBT",
    "B",
    "A",
    "C4",
    "SIM",
    "PTH",
    "PL"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["gooey.*"]
ignore_missing_imports = true
